crates/scheduler/tests/trybuild/fail/serde_alias.stderr
error: this serde attribute is incompatible with ScheduledTaskParams
 --> tests/trybuild/fail/serde_alias.rs:6:13
  |
6 |     #[serde(alias = "old_name")]
  |             ^^^^^^^^^^^^^^^^^^
